# todak

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  TODOS.md  docker-compose.yml
agent/: .dockerignore  Dockerfile  livekit.toml  pyproject.toml
agent/src/agent/: main.py  worker.py
docs/: db-schema.md  handoff.md  implementation-plan.md  langgraph-design.md  migrations.md  next-steps.md  progress.md  technical-architecture.md
web/: Dockerfile  drizzle.config.ts  package.json  pnpm-lock.yaml
web/drizzle/: 0000_pale_loners.sql
web/drizzle/meta/: 0000_snapshot.json  _journal.json
web/public/: manifest.json
web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/src/app/api/livekit/token/: route.ts
web/src/app/api/memory/: route.ts
web/src/app/api/safety-event/: route.ts
web/src/app/api/session/end/: route.ts
web/src/app/api/session/start/: route.ts
web/src/components/: session-view.module.css  session-view.tsx
web/src/db/: client.ts  schema.ts
web/src/lib/: internal-auth.ts
