[project]
name = "agent"
version = "0.1.0"
description = "Todak LiveKit voice agent"
readme = "README.md"
authors = [
    { name = "Nam Yeop Lee", email = "hermes0827@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.2",
    "livekit-agents[google,silero,turn-detector]>=1.4.5",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-elevenlabs>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
agent = "agent.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
